--- a/readthedocs/requirements.txt
+++ b/readthedocs/requirements.txt
@@ -1,1 +1,1 @@
-../src/cesarp  # only needed for readthedocs api autogeneration; dependencies are managed with poetry in pyproject.toml
+../src/cesarp/  # only needed for readthedocs api autogeneration; dependencies are managed with poetry in pyproject.toml
